accelerated-domains: add haichuang3d.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37836,6 +37836,7 @@ server=/haicent.com/114.114.114.114
 server=/haichangchina.com/114.114.114.114
 server=/haichangoceanpark.com/114.114.114.114
 server=/haichen-logistics.com/114.114.114.114
+server=/haichuang3d.com/114.114.114.114
 server=/haichufang.com/114.114.114.114
 server=/haici.com/114.114.114.114
 server=/haicj.com/114.114.114.114
