--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62933,6 +62933,7 @@ server=/ongoalconveying.com/114.114.114.114
 server=/onijiang.com/114.114.114.114
 server=/onixhiend.com/114.114.114.114
 server=/onjobedu.com/114.114.114.114
+server=/onkocares.com/114.114.114.114
 server=/onlady.net/114.114.114.114
 server=/online-cmcc.net/114.114.114.114
 server=/online-edu.org/114.114.114.114
