accelerated-domains: add tongyuan.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78813,6 +78813,7 @@ server=/tongyipumps.com/114.114.114.114
 server=/tongyist.com/114.114.114.114
 server=/tongyongpe.net/114.114.114.114
 server=/tongyoujiancai.com/114.114.114.114
+server=/tongyuan.cc/114.114.114.114
 server=/tongyuanos.com/114.114.114.114
 server=/tongyue.com/114.114.114.114
 server=/tongzhuo100.com/114.114.114.114
