--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75541,6 +75541,7 @@ server=/suzhou-marathon.com/114.114.114.114
 server=/suzhoubank.com/114.114.114.114
 server=/suzhouds.com/114.114.114.114
 server=/suzhoufashion.com/114.114.114.114
+server=/suzhouhengtai.com/114.114.114.114
 server=/suzhoujicai.com/114.114.114.114
 server=/suzhoulida.com/114.114.114.114
 server=/suzhousj.com/114.114.114.114
