accelerated-domains: add etrasemi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29018,6 +29018,7 @@ server=/etrack07.com/114.114.114.114
 server=/etrack08.com/114.114.114.114
 server=/etradegx.com/114.114.114.114
 server=/etranshare.com/114.114.114.114
+server=/etrasemi.com/114.114.114.114
 server=/etrd.org/114.114.114.114
 server=/etroytj33.fun/114.114.114.114
 server=/etrump.net/114.114.114.114
