--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43056,6 +43056,7 @@ server=/hyl1.tv/114.114.114.114
 server=/hylad.com/114.114.114.114
 server=/hylanda.com/114.114.114.114
 server=/hylandslaw.com/114.114.114.114
+server=/hylicreate.com/114.114.114.114
 server=/hylik.net/114.114.114.114
 server=/hylname.com/114.114.114.114
 server=/hymall.net/114.114.114.114
