accelerated-domains: add novocranes.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62062,6 +62062,7 @@ server=/novelquickapppic.com/114.114.114.114
 server=/novelsee.com/114.114.114.114
 server=/novemideas.com/114.114.114.114
 server=/novocool.com/114.114.114.114
+server=/novocranes.com/114.114.114.114
 server=/novogene.com/114.114.114.114
 server=/novosns.com/114.114.114.114
 server=/novtium.com/114.114.114.114
