--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87620,6 +87620,7 @@ server=/xikuan.com/114.114.114.114
 server=/xikuqi.com/114.114.114.114
 server=/xiladaili.com/114.114.114.114
 server=/xilaiping.com/114.114.114.114
+server=/xilanggufen.com/114.114.114.114
 server=/xilddt.com/114.114.114.114
 server=/xilehongniang.com/114.114.114.114
 server=/xilele.com/114.114.114.114
