accelerated-domains: add shihua-group.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72047,6 +72047,7 @@ server=/shiguangxu.com/114.114.114.114
 server=/shiguangyouju.com/114.114.114.114
 server=/shiguanvip.com/114.114.114.114
 server=/shiguanyinger-jg.com/114.114.114.114
+server=/shihua-group.com/114.114.114.114
 server=/shihuantong.com/114.114.114.114
 server=/shij001.com/114.114.114.114
 server=/shijiala.com/114.114.114.114
