accelerated-domains: add wing-max.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84427,6 +84427,7 @@ server=/winfang.com/114.114.114.114
 server=/winfanqie.com/114.114.114.114
 server=/winfreeinfo.com/114.114.114.114
 server=/wing-id.com/114.114.114.114
+server=/wing-max.com/114.114.114.114
 server=/wingconn.com/114.114.114.114
 server=/winglinetrans.com/114.114.114.114
 server=/winglungbank.com/114.114.114.114
