--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74139,6 +74139,7 @@ server=/sojoline.com/114.114.114.114
 server=/sojson.com/114.114.114.114
 server=/sojump.com/114.114.114.114
 server=/soke17.com/114.114.114.114
+server=/soken-sz.com/114.114.114.114
 server=/sokoban.ws/114.114.114.114
 server=/soku.com/114.114.114.114
 server=/sokuba.com/114.114.114.114
