--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74777,6 +74777,7 @@ server=/sssszs.com/114.114.114.114
 server=/sssyyy.com/114.114.114.114
 server=/sst-ic.com/114.114.114.114
 server=/sst-sd.com/114.114.114.114
+server=/sst-sz.com/114.114.114.114
 server=/sswater.com/114.114.114.114
 server=/sswchina.com/114.114.114.114
 server=/sswl315.com/114.114.114.114
