accelerated-domains: add lsnm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55350,6 +55350,7 @@ server=/lslihai.com/114.114.114.114
 server=/lslkkyj.com/114.114.114.114
 server=/lsltech.net/114.114.114.114
 server=/lsmtjy.com/114.114.114.114
+server=/lsnm.com/114.114.114.114
 server=/lsoli.com/114.114.114.114
 server=/lsoos.com/114.114.114.114
 server=/lsplayer.com/114.114.114.114
