--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76110,6 +76110,7 @@ server=/szaudio.com/114.114.114.114
 server=/szaudio.net/114.114.114.114
 server=/szautism.com/114.114.114.114
 server=/szbaicao.com/114.114.114.114
+server=/szbaleng.com/114.114.114.114
 server=/szbaoly.com/114.114.114.114
 server=/szbaoming.com/114.114.114.114
 server=/szbbs.org/114.114.114.114
