accelerated-domains: add ic-captain.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43658,6 +43658,7 @@ server=/ibuychem.com/114.114.114.114
 server=/ibw.cc/114.114.114.114
 server=/ibx8.com/114.114.114.114
 server=/ibytedapm.com/114.114.114.114
+server=/ic-captain.com/114.114.114.114
 server=/ic-king.com/114.114.114.114
 server=/ic-ldo.com/114.114.114.114
 server=/ic-valley.com/114.114.114.114
