accelerated-domains: add apextechnik.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11429,6 +11429,7 @@ server=/apetdog.com/114.114.114.114
 server=/apevolo.com/114.114.114.114
 server=/apexmic.com/114.114.114.114
 server=/apexquartzstone.com/114.114.114.114
+server=/apextechnik.com/114.114.114.114
 server=/apexwebdirectory.net/114.114.114.114
 server=/apeyun.com/114.114.114.114
 server=/apfeien.com/114.114.114.114
