accelerated-domains: add siscantech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73345,6 +73345,7 @@ server=/sireda.com/114.114.114.114
 server=/sirfang.com/114.114.114.114
 server=/siryal.com/114.114.114.114
 server=/siryin.com/114.114.114.114
+server=/siscantech.com/114.114.114.114
 server=/siscmag.com/114.114.114.114
 server=/sisen.com/114.114.114.114
 server=/sisensing.com/114.114.114.114
