--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27605,6 +27605,7 @@ server=/e9797.com/114.114.114.114
 server=/e9898.com/114.114.114.114
 server=/e99999.com/114.114.114.114
 server=/ea-retina.com/114.114.114.114
+server=/ea-xing.com/114.114.114.114
 server=/ea360.com/114.114.114.114
 server=/ea3w.com/114.114.114.114
 server=/eabax.com/114.114.114.114
