--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39640,6 +39640,7 @@ server=/hermod1.com/114.114.114.114
 server=/hero-geek.com/114.114.114.114
 server=/herocoming.com/114.114.114.114
 server=/herohr.net/114.114.114.114
+server=/heroic-ltd.com/114.114.114.114
 server=/heroicyang.com/114.114.114.114
 server=/herosanctuary.com/114.114.114.114
 server=/heroskate.com/114.114.114.114
