accelerated-domains: add ktt-automation.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51654,6 +51654,7 @@ server=/ktplay.com/114.114.114.114
 server=/ktrcn.com/114.114.114.114
 server=/ktstny.com/114.114.114.114
 server=/ktswjt.com/114.114.114.114
+server=/ktt-automation.com/114.114.114.114
 server=/ktuner.store/114.114.114.114
 server=/ktv.com/114.114.114.114
 server=/ktvc8.com/114.114.114.114
