accelerated-domains: add huacooling.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41795,6 +41795,7 @@ server=/huachenit.com/114.114.114.114
 server=/huachenyuanyang.com/114.114.114.114
 server=/huachuang.fun/114.114.114.114
 server=/huacolor.com/114.114.114.114
+server=/huacooling.com/114.114.114.114
 server=/huada120.com/114.114.114.114
 server=/huadabz.com/114.114.114.114
 server=/huadalvmei.com/114.114.114.114
