--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69740,6 +69740,7 @@ server=/saicmg.com/114.114.114.114
 server=/saicmobility.com/114.114.114.114
 server=/saicmotor.com/114.114.114.114
 server=/saicyun.com/114.114.114.114
+server=/saiczd.com/114.114.114.114
 server=/saiday.com/114.114.114.114
 server=/saidouwang.com/114.114.114.114
 server=/saiduo888.com/114.114.114.114
