accelerated-domains: add rongcheer.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69050,6 +69050,7 @@ server=/rongcfg.com/114.114.114.114
 server=/rongchain.com/114.114.114.114
 server=/rongchangtong.com/114.114.114.114
 server=/rongchaodichan.com/114.114.114.114
+server=/rongcheer.com/114.114.114.114
 server=/rongchenjx.com/114.114.114.114
 server=/rongdasoft.com/114.114.114.114
 server=/rongdatamall.com/114.114.114.114
