accelerated-domains: add stt-bearing.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75038,6 +75038,7 @@ server=/struhuts.com/114.114.114.114
 server=/stshuizhi.com/114.114.114.114
 server=/stswjx.com/114.114.114.114
 server=/stszcm.com/114.114.114.114
+server=/stt-bearing.com/114.114.114.114
 server=/sttcq.com/114.114.114.114
 server=/sttry.com/114.114.114.114
 server=/stu-works.com/114.114.114.114
