accelerated-domains: add oms-elevator.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62856,6 +62856,7 @@ server=/omooo.net/114.114.114.114
 server=/omos88.com/114.114.114.114
 server=/omowork.com/114.114.114.114
 server=/ompchina.net/114.114.114.114
+server=/oms-elevator.com/114.114.114.114
 server=/omsheji.com/114.114.114.114
 server=/omsmy.com/114.114.114.114
 server=/omso2o.com/114.114.114.114
