accelerated-domains: add mictormedical.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58038,6 +58038,7 @@ server=/microwu.com/114.114.114.114
 server=/microxiang.com/114.114.114.114
 server=/microyan.com/114.114.114.114
 server=/microzuji.com/114.114.114.114
+server=/mictormedical.com/114.114.114.114
 server=/micw.com/114.114.114.114
 server=/micyjz.com/114.114.114.114
 server=/midaapi.com/114.114.114.114
