--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45070,6 +45070,7 @@ server=/innotechx.com/114.114.114.114
 server=/innotron.com/114.114.114.114
 server=/innov-xsystem.com/114.114.114.114
 server=/innovatedigital.com/114.114.114.114
+server=/innoventbio.com/114.114.114.114
 server=/innoveronline.com/114.114.114.114
 server=/innovidcn.com/114.114.114.114
 server=/innovisgroup.com/114.114.114.114
