accelerated-domains: add qsjxzz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67260,6 +67260,7 @@ server=/qshcsy8.com/114.114.114.114
 server=/qshealth.com/114.114.114.114
 server=/qshlh.com/114.114.114.114
 server=/qsiso.com/114.114.114.114
+server=/qsjxzz.com/114.114.114.114
 server=/qskretkf.com/114.114.114.114
 server=/qsl.pub/114.114.114.114
 server=/qsmchina.com/114.114.114.114
