accelerated-domains: add sinoma-suzhou.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73265,6 +73265,7 @@ server=/sinologyinstitute.com/114.114.114.114
 server=/sinolub.com/114.114.114.114
 server=/sinolube.com/114.114.114.114
 server=/sinoluhong.com/114.114.114.114
+server=/sinoma-suzhou.com/114.114.114.114
 server=/sinomachint.com/114.114.114.114
 server=/sinomapping.com/114.114.114.114
 server=/sinomaps.com/114.114.114.114
