accelerated-domains: add beaverbio.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13671,6 +13671,7 @@ server=/beautifulism.com/114.114.114.114
 server=/beautifullinux.com/114.114.114.114
 server=/beautifulzzzz.com/114.114.114.114
 server=/beautyplus.com/114.114.114.114
+server=/beaverbio.com/114.114.114.114
 server=/bebhmongb.com/114.114.114.114
 server=/bebingocard.com/114.114.114.114
 server=/bechangedt.com/114.114.114.114
