accelerated-domains: add meimedical.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57440,6 +57440,7 @@ server=/meiljiaqi.com/114.114.114.114
 server=/meilunmeijia.com/114.114.114.114
 server=/meilunsc.com/114.114.114.114
 server=/meilvtong.com/114.114.114.114
+server=/meimedical.com/114.114.114.114
 server=/meimeidu.com/114.114.114.114
 server=/meimeifa.com/114.114.114.114
 server=/meimeiriji.com/114.114.114.114
