--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39501,6 +39501,7 @@ server=/helloxjn.com/114.114.114.114
 server=/helloxkb.com/114.114.114.114
 server=/helloyao.com/114.114.114.114
 server=/helloyehui.com/114.114.114.114
+server=/helnon.com/114.114.114.114
 server=/helo11.com/114.114.114.114
 server=/helperaddress.com/114.114.114.114
 server=/helpmeng.com/114.114.114.114
