--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69903,6 +69903,7 @@ server=/sanjiuxs.com/114.114.114.114
 server=/sanjun.com/114.114.114.114
 server=/sankengriji.com/114.114.114.114
 server=/sankgo.com/114.114.114.114
+server=/sanki-suzhou.com/114.114.114.114
 server=/sankki.com/114.114.114.114
 server=/sankougift.com/114.114.114.114
 server=/sankuai.com/114.114.114.114
