--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81877,6 +81877,7 @@ server=/vjie.com/114.114.114.114
 server=/vjifen.com/114.114.114.114
 server=/vjread.com/114.114.114.114
 server=/vjshi.com/114.114.114.114
+server=/vjtchina.com/114.114.114.114
 server=/vjzogyz.com/114.114.114.114
 server=/vk6.me/114.114.114.114
 server=/vk8.co/114.114.114.114
