accelerated-domains: add mgh2-lab.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57818,6 +57818,7 @@ server=/mgff.com/114.114.114.114
 server=/mgfty.com/114.114.114.114
 server=/mgfy88.com/114.114.114.114
 server=/mggtech.vip/114.114.114.114
+server=/mgh2-lab.com/114.114.114.114
 server=/mgjianshe.com/114.114.114.114
 server=/mgkj.vip/114.114.114.114
 server=/mgkjht.com/114.114.114.114
