accelerated-domains: add wutongchain.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85628,6 +85628,7 @@ server=/wuteaclub.com/114.114.114.114
 server=/wutep.com/114.114.114.114
 server=/wuthreat.com/114.114.114.114
 server=/wutianqi.com/114.114.114.114
+server=/wutongchain.com/114.114.114.114
 server=/wutongguo.com/114.114.114.114
 server=/wutongip.com/114.114.114.114
 server=/wutongtec.com/114.114.114.114
