accelerated-domains: add itwsms.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45895,6 +45895,7 @@ server=/itvssp.com/114.114.114.114
 server=/itwanger.com/114.114.114.114
 server=/itwlw.com/114.114.114.114
 server=/itwork.club/114.114.114.114
+server=/itwsms.com/114.114.114.114
 server=/itxe.net/114.114.114.114
 server=/itxia.club/114.114.114.114
 server=/itxinrou.com/114.114.114.114
