--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64952,6 +64952,7 @@ server=/polycn.com/114.114.114.114
 server=/polycom-jl.com/114.114.114.114
 server=/polyhotel.com/114.114.114.114
 server=/polyinno.com/114.114.114.114
+server=/polyreymed.com/114.114.114.114
 server=/polytheatre.com/114.114.114.114
 server=/polytheatresz.com/114.114.114.114
 server=/polyv.net/114.114.114.114
