accelerated-domains: add carertec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17149,6 +17149,7 @@ server=/careerchina.com/114.114.114.114
 server=/careerqihang.com/114.114.114.114
 server=/careersky.org/114.114.114.114
 server=/carelifefood.com/114.114.114.114
+server=/carertec.com/114.114.114.114
 server=/careuc.com/114.114.114.114
 server=/carezb.com/114.114.114.114
 server=/cargai.com/114.114.114.114
