accelerated-domains: add prociss.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65264,6 +65264,7 @@ server=/procar.cc/114.114.114.114
 server=/processedmetals.com/114.114.114.114
 server=/processon.com/114.114.114.114
 server=/procetpoeinjector.com/114.114.114.114
+server=/prociss.com/114.114.114.114
 server=/procivi.net/114.114.114.114
 server=/prod-mv.com/114.114.114.114
 server=/prodcam.cc/114.114.114.114
