accelerated-domains: add rdmicro.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68394,6 +68394,7 @@ server=/rdgzxx.net/114.114.114.114
 server=/rdhyw.com/114.114.114.114
 server=/rdidc.com/114.114.114.114
 server=/rdjmgg.com/114.114.114.114
+server=/rdmicro.com/114.114.114.114
 server=/rdnsdb.com/114.114.114.114
 server=/rdplat.com/114.114.114.114
 server=/rdsdk.com/114.114.114.114
