accelerated-domains: add yocofs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92551,6 +92551,7 @@ server=/yocajr.com/114.114.114.114
 server=/yocan.net/114.114.114.114
 server=/yocdev.com/114.114.114.114
 server=/yocng.com/114.114.114.114
+server=/yocofs.com/114.114.114.114
 server=/yocopi.com/114.114.114.114
 server=/yocvn.com/114.114.114.114
 server=/yocyxc.com/114.114.114.114
