accelerated-domains: add lidamicron.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53811,6 +53811,7 @@ server=/licqi.com/114.114.114.114
 server=/licstar.net/114.114.114.114
 server=/lida100.com/114.114.114.114
 server=/lidakang.com/114.114.114.114
+server=/lidamicron.com/114.114.114.114
 server=/lideapower.com/114.114.114.114
 server=/lidebo.com/114.114.114.114
 server=/lidecheng.com/114.114.114.114
