accelerated-domains: add nsynu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62197,6 +62197,7 @@ server=/nswyun.com/114.114.114.114
 server=/nswzs.com/114.114.114.114
 server=/nsxww.com/114.114.114.114
 server=/nsydt.com/114.114.114.114
+server=/nsynu.com/114.114.114.114
 server=/nszmz.com/114.114.114.114
 server=/nszxsyxx.com/114.114.114.114
 server=/nt.app/114.114.114.114
