accelerated-domains: add zhongcaitong.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96420,6 +96420,7 @@ server=/zhongbowenwu.com/114.114.114.114
 server=/zhongboxinwen.com/114.114.114.114
 server=/zhongcaistream.com/114.114.114.114
 server=/zhongcaisuo.com/114.114.114.114
+server=/zhongcaitong.net/114.114.114.114
 server=/zhongche.com/114.114.114.114
 server=/zhongchebaolian.com/114.114.114.114
 server=/zhongchoujia.com/114.114.114.114
