--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40921,6 +40921,7 @@ server=/hollyuc.com/114.114.114.114
 server=/hollywant.com/114.114.114.114
 server=/holmesian.org/114.114.114.114
 server=/holoalpha.com/114.114.114.114
+server=/holsauto.com/114.114.114.114
 server=/holteksupport.com/114.114.114.114
 server=/holymalls.com/114.114.114.114
 server=/holyxiongan.com/114.114.114.114
