--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42086,6 +42086,7 @@ server=/huasiwood.com/114.114.114.114
 server=/huasongwang.com/114.114.114.114
 server=/huasuhui.com/114.114.114.114
 server=/huasyun.com/114.114.114.114
+server=/huatai-elec.com/114.114.114.114
 server=/huatai-pb.com/114.114.114.114
 server=/huatai1993.com/114.114.114.114
 server=/huatengsci.com/114.114.114.114
