--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96277,6 +96277,7 @@ server=/zhisiyun.com/114.114.114.114
 server=/zhisuoyi.net/114.114.114.114
 server=/zhitaosoft.com/114.114.114.114
 server=/zhitingtech.com/114.114.114.114
+server=/zhito.com/114.114.114.114
 server=/zhitongcaijing.com/114.114.114.114
 server=/zhitouxing.com/114.114.114.114
 server=/zhituad.com/114.114.114.114
