accelerated-domains: add szinvent.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76300,6 +76300,7 @@ server=/szhzzl.com/114.114.114.114
 server=/szhzzy.com/114.114.114.114
 server=/szicc.net/114.114.114.114
 server=/szider.com/114.114.114.114
+server=/szinvent.com/114.114.114.114
 server=/szitcare.com/114.114.114.114
 server=/szjawest.com/114.114.114.114
 server=/szjbz.cc/114.114.114.114
