--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75313,6 +75313,7 @@ server=/sun0769.com/114.114.114.114
 server=/sun0769ns.com/114.114.114.114
 server=/sun0816.com/114.114.114.114
 server=/sun66.net/114.114.114.114
+server=/suna-opto.com/114.114.114.114
 server=/sunaas.com/114.114.114.114
 server=/sunacctg.com/114.114.114.114
 server=/sunalytools.com/114.114.114.114
