accelerated-domains: add huakaifilter.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41886,6 +41886,7 @@ server=/huajiujian.com/114.114.114.114
 server=/huajuanma.com/114.114.114.114
 server=/huajuanyun.com/114.114.114.114
 server=/huajx.com/114.114.114.114
+server=/huakaifilter.com/114.114.114.114
 server=/huake-weixin.com/114.114.114.114
 server=/huakeyun.com/114.114.114.114
 server=/huakpower.com/114.114.114.114
