accelerated-domains: add bellinlaser.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13870,6 +13870,7 @@ server=/beliefy.com/114.114.114.114
 server=/belle-vie.xyz/114.114.114.114
 server=/belle8.com/114.114.114.114
 server=/belletrip.com/114.114.114.114
+server=/bellinlaser.com/114.114.114.114
 server=/belllan.com/114.114.114.114
 server=/belloai.com/114.114.114.114
 server=/beltandroadforum.org/114.114.114.114
