accelerated-domains: add zhangxinkeji.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95696,6 +95696,7 @@ server=/zhangwenli.com/114.114.114.114
 server=/zhangwojumian.com/114.114.114.114
 server=/zhangxin.ltd/114.114.114.114
 server=/zhangxinhulian.com/114.114.114.114
+server=/zhangxinkeji.com/114.114.114.114
 server=/zhangxinmj.com/114.114.114.114
 server=/zhangxinxu.com/114.114.114.114
 server=/zhangyi123.com/114.114.114.114
