accelerated-domains: add yunchip.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93883,6 +93883,7 @@ server=/yuncechina.com/114.114.114.114
 server=/yunceng.com/114.114.114.114
 server=/yuncheng.com/114.114.114.114
 server=/yunchengfang.com/114.114.114.114
+server=/yunchip.com/114.114.114.114
 server=/yunchonglife.com/114.114.114.114
 server=/yunchongmob.com/114.114.114.114
 server=/yunchou.com/114.114.114.114
