accelerated-domains: add cpg-motor.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22347,6 +22347,7 @@ server=/cpecc.net/114.114.114.114
 server=/cpeccgx.net/114.114.114.114
 server=/cpeol.net/114.114.114.114
 server=/cpepgc.com/114.114.114.114
+server=/cpg-motor.com/114.114.114.114
 server=/cphfgg.com/114.114.114.114
 server=/cphoto.net/114.114.114.114
 server=/cphoto.org/114.114.114.114
