accelerated-domains: add masinen.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56966,6 +56966,7 @@ server=/mashiro.me/114.114.114.114
 server=/mashrabiya-screen.com/114.114.114.114
 server=/masiao.com/114.114.114.114
 server=/masikkk.com/114.114.114.114
+server=/masinen.com/114.114.114.114
 server=/masjfc.com/114.114.114.114
 server=/masjinquan.com/114.114.114.114
 server=/maslimin.com/114.114.114.114
