--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57258,6 +57258,7 @@ server=/me361.com/114.114.114.114
 server=/me4399.com/114.114.114.114
 server=/meadin.com/114.114.114.114
 server=/meaningfulcloud.com/114.114.114.114
+server=/meanwell.cc/114.114.114.114
 server=/meazhi.com/114.114.114.114
 server=/meb.com/114.114.114.114
 server=/mebo.com/114.114.114.114
