--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11716,6 +11716,7 @@ server=/areader.com/114.114.114.114
 server=/arealx.com/114.114.114.114
 server=/arebz.com/114.114.114.114
 server=/arefly.com/114.114.114.114
+server=/arerberte.com/114.114.114.114
 server=/arestech-sz.com/114.114.114.114
 server=/areweloongyet.com/114.114.114.114
 server=/arextecn.com/114.114.114.114
