--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84577,6 +84577,7 @@ server=/wiseqx.com/114.114.114.114
 server=/wiseuc.com/114.114.114.114
 server=/wisevector.com/114.114.114.114
 server=/wisewatercloud.com/114.114.114.114
+server=/wish-hightech.com/114.114.114.114
 server=/wish3d.com/114.114.114.114
 server=/wishbuild.com/114.114.114.114
 server=/wishcad.com/114.114.114.114
