accelerated-domains: add hg-automation.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39863,6 +39863,7 @@ server=/hfyuqin.com/114.114.114.114
 server=/hfyylcy.com/114.114.114.114
 server=/hfzhengxu.com/114.114.114.114
 server=/hfzkgw.com/114.114.114.114
+server=/hg-automation.com/114.114.114.114
 server=/hg-daigou.com/114.114.114.114
 server=/hg-valves.com/114.114.114.114
 server=/hg1218.com/114.114.114.114
