--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58363,6 +58363,7 @@ server=/mingyuanyun.com/114.114.114.114
 server=/mingyueqingfengshe.com/114.114.114.114
 server=/mingyutang.com/114.114.114.114
 server=/mingzaily.com/114.114.114.114
+server=/mingzhi-tech.com/114.114.114.114
 server=/mingzhujs.com/114.114.114.114
 server=/mingzhuoedu.com/114.114.114.114
 server=/mingzhuxiaoshuo.com/114.114.114.114
