accelerated-domains: add atshph.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12052,6 +12052,7 @@ server=/atri.ink/114.114.114.114
 server=/atriptech.com/114.114.114.114
 server=/atrustdns.com/114.114.114.114
 server=/ats6355866.com/114.114.114.114
+server=/atshph.com/114.114.114.114
 server=/atstudy.com/114.114.114.114
 server=/atsws.com/114.114.114.114
 server=/attacker.fit/114.114.114.114
