--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10959,6 +10959,7 @@ server=/anchnet.com/114.114.114.114
 server=/ancii.com/114.114.114.114
 server=/ancloud.xin/114.114.114.114
 server=/ancun.com/114.114.114.114
+server=/anda-tech.com/114.114.114.114
 server=/andaike.com/114.114.114.114
 server=/andakc.com/114.114.114.114
 server=/andan.me/114.114.114.114
