accelerated-domains: add hyc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43040,6 +43040,7 @@ server=/hybase.com/114.114.114.114
 server=/hybbs.net/114.114.114.114
 server=/hybbtree.com/114.114.114.114
 server=/hybzm.com/114.114.114.114
+server=/hyc.com/114.114.114.114
 server=/hycdn.com/114.114.114.114
 server=/hycfw.com/114.114.114.114
 server=/hycgy.com/114.114.114.114
