--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93103,6 +93103,7 @@ server=/youyi-game.com/114.114.114.114
 server=/youyi800.com/114.114.114.114
 server=/youyigame.com/114.114.114.114
 server=/youyijifen.com/114.114.114.114
+server=/youyijingmi.com/114.114.114.114
 server=/youyijiu.com/114.114.114.114
 server=/youyiqi.com/114.114.114.114
 server=/youyiqiaogou.com/114.114.114.114
