--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73392,6 +73392,7 @@ server=/siqiquan.org/114.114.114.114
 server=/sique.com/114.114.114.114
 server=/sir3.com/114.114.114.114
 server=/sir66.com/114.114.114.114
+server=/siranbio.com/114.114.114.114
 server=/sireda.com/114.114.114.114
 server=/sirfang.com/114.114.114.114
 server=/siryal.com/114.114.114.114
