accelerated-domains: add sf-bsd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71099,6 +71099,7 @@ server=/seyingwumei.com/114.114.114.114
 server=/seyuma-cn.com/114.114.114.114
 server=/sf-airlines.com/114.114.114.114
 server=/sf-bearing.com/114.114.114.114
+server=/sf-bsd.com/114.114.114.114
 server=/sf-card.com/114.114.114.114
 server=/sf-china.com/114.114.114.114
 server=/sf-cityrush.com/114.114.114.114
