accelerated-domains: add itimotor.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45813,6 +45813,7 @@ server=/itigergrowtha.com/114.114.114.114
 server=/itigerup.com/114.114.114.114
 server=/itilxf.com/114.114.114.114
 server=/itilzj.com/114.114.114.114
+server=/itimotor.com/114.114.114.114
 server=/itingwa.com/114.114.114.114
 server=/itit.io/114.114.114.114
 server=/itjoy.net/114.114.114.114
