--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71057,6 +71057,7 @@ server=/seoxuetang.com/114.114.114.114
 server=/sep.cc/114.114.114.114
 server=/sepact.com/114.114.114.114
 server=/sepahbourse.com/114.114.114.114
+server=/sepimcsemi.com/114.114.114.114
 server=/septinn.com/114.114.114.114
 server=/septwolves.com/114.114.114.114
 server=/sepu.net/114.114.114.114
