accelerated-domains: add matrixsens.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57028,6 +57028,7 @@ server=/matpool.net/114.114.114.114
 server=/matrix-net.tech/114.114.114.114
 server=/matrixchuang.com/114.114.114.114
 server=/matrixerse.com/114.114.114.114
+server=/matrixsens.com/114.114.114.114
 server=/matsuri.site/114.114.114.114
 server=/matt33.com/114.114.114.114
 server=/matthewdays.com/114.114.114.114
