--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27489,6 +27489,7 @@ server=/dzshengchi.com/114.114.114.114
 server=/dzsm.com/114.114.114.114
 server=/dzspzx.com/114.114.114.114
 server=/dzssy.com/114.114.114.114
+server=/dztester.com/114.114.114.114
 server=/dztv.tv/114.114.114.114
 server=/dztz168.com/114.114.114.114
 server=/dzvv.com/114.114.114.114
