--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73133,6 +73133,7 @@ server=/silenceper.com/114.114.114.114
 server=/silianmall.com/114.114.114.114
 server=/siliaobaba.com/114.114.114.114
 server=/siliaokelijixie.com/114.114.114.114
+server=/silikron.com/114.114.114.114
 server=/silinchen.com/114.114.114.114
 server=/siling.com/114.114.114.114
 server=/silique.com/114.114.114.114
