--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31933,6 +31933,7 @@ server=/fzzixun.com/114.114.114.114
 server=/fzzqcdn.com/114.114.114.114
 server=/g-biomed.com/114.114.114.114
 server=/g-medon.com/114.114.114.114
+server=/g-spin.com/114.114.114.114
 server=/g-tar.com/114.114.114.114
 server=/g-var.com/114.114.114.114
 server=/g11edashb1.fun/114.114.114.114
