accelerated-domains: add 3echemical.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3971,6 +3971,7 @@ server=/3dxuan.com/114.114.114.114
 server=/3dxy.net/114.114.114.114
 server=/3dzyw.com/114.114.114.114
 server=/3e.net/114.114.114.114
+server=/3echemical.com/114.114.114.114
 server=/3edns.com/114.114.114.114
 server=/3elife.net/114.114.114.114
 server=/3eyes.org/114.114.114.114
