--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68859,6 +68859,7 @@ server=/ricterz.me/114.114.114.114
 server=/rictos.com/114.114.114.114
 server=/riecent.com/114.114.114.114
 server=/rifubao.com/114.114.114.114
+server=/rigger-micro.com/114.114.114.114
 server=/rightknights.com/114.114.114.114
 server=/rightmatching.com/114.114.114.114
 server=/rightpaddle.com/114.114.114.114
