--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49539,6 +49539,7 @@ server=/junfalipin.com/114.114.114.114
 server=/junfengzl.com/114.114.114.114
 server=/junfull.com/114.114.114.114
 server=/junhe.com/114.114.114.114
+server=/juniontech.com/114.114.114.114
 server=/junjiahao.com/114.114.114.114
 server=/junjing.net/114.114.114.114
 server=/junjingsuodao.com/114.114.114.114
