accelerated-domains: add suzhouleasing.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75621,6 +75621,7 @@ server=/suzhouds.com/114.114.114.114
 server=/suzhoufashion.com/114.114.114.114
 server=/suzhouhengtai.com/114.114.114.114
 server=/suzhoujicai.com/114.114.114.114
+server=/suzhouleasing.com/114.114.114.114
 server=/suzhoulida.com/114.114.114.114
 server=/suzhousj.com/114.114.114.114
 server=/suzip.com/114.114.114.114
