accelerated-domains: add vigorgb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81702,6 +81702,7 @@ server=/viewstock.com/114.114.114.114
 server=/viewtool.com/114.114.114.114
 server=/viewtrans.com/114.114.114.114
 server=/vifaka.com/114.114.114.114
+server=/vigorgb.com/114.114.114.114
 server=/vigtel.com/114.114.114.114
 server=/vigtm-meeting-tencent.com/114.114.114.114
 server=/viigee.com/114.114.114.114
