--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53197,6 +53197,7 @@ server=/leftshadow.com/114.114.114.114
 server=/leftso.com/114.114.114.114
 server=/lefuzuwu.com/114.114.114.114
 server=/legendsec.com/114.114.114.114
+server=/legendsemi.com/114.114.114.114
 server=/legendtkl.com/114.114.114.114
 server=/legion.com.hk/114.114.114.114
 server=/legou456.com/114.114.114.114
