accelerated-domains: add enkris.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28645,6 +28645,7 @@ server=/enjoyz.com/114.114.114.114
 server=/enketu.com/114.114.114.114
 server=/enkichen.com/114.114.114.114
 server=/enkj.com/114.114.114.114
+server=/enkris.com/114.114.114.114
 server=/enlaide.com/114.114.114.114
 server=/enlightent.com/114.114.114.114
 server=/enlistsecurely.com/114.114.114.114
