accelerated-domains: add sqhec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74675,6 +74675,7 @@ server=/sqfcw.com/114.114.114.114
 server=/sqfgc.com/114.114.114.114
 server=/sqggzy.com/114.114.114.114
 server=/sqgwh.com/114.114.114.114
+server=/sqhec.com/114.114.114.114
 server=/sqis.com/114.114.114.114
 server=/sqj888.com/114.114.114.114
 server=/sqjk123.com/114.114.114.114
