--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76584,6 +76584,7 @@ server=/szwb.com/114.114.114.114
 server=/szwblm.com/114.114.114.114
 server=/szwchy.com/114.114.114.114
 server=/szwego.com/114.114.114.114
+server=/szweidi.com/114.114.114.114
 server=/szweijubao.com/114.114.114.114
 server=/szweita.com/114.114.114.114
 server=/szwfzs.com/114.114.114.114
