--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50973,6 +50973,7 @@ server=/kiees.com/114.114.114.114
 server=/kiiik.com/114.114.114.114
 server=/kiijoy.com/114.114.114.114
 server=/kiinii.com/114.114.114.114
+server=/kijifept.com/114.114.114.114
 server=/kikiwon.com/114.114.114.114
 server=/kikoplay.fun/114.114.114.114
 server=/kikusuitape.com/114.114.114.114
