accelerated-domains: add higer.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40101,6 +40101,7 @@ server=/hifpga.com/114.114.114.114
 server=/hifreud.com/114.114.114.114
 server=/hifuntv.com/114.114.114.114
 server=/higame123.com/114.114.114.114
+server=/higer.com/114.114.114.114
 server=/higeshi.com/114.114.114.114
 server=/higgmm.net/114.114.114.114
 server=/high-defense-163.com/114.114.114.114
