accelerated-domains: add nzsensing.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62513,6 +62513,7 @@ server=/nziku.com/114.114.114.114
 server=/nzmice.com/114.114.114.114
 server=/nzpzi0y.xyz/114.114.114.114
 server=/nzqyowk.com/114.114.114.114
+server=/nzsensing.com/114.114.114.114
 server=/nzsiteres.com/114.114.114.114
 server=/nzw6.com/114.114.114.114
 server=/nzwgs.com/114.114.114.114
