accelerated-domains: add healrna.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39261,6 +39261,7 @@ server=/headconsultant.com/114.114.114.114
 server=/header.cc/114.114.114.114
 server=/heading123.com/114.114.114.114
 server=/headphoneclub.com/114.114.114.114
+server=/healrna.com/114.114.114.114
 server=/healthan.net/114.114.114.114
 server=/healthcareol.net/114.114.114.114
 server=/healthcareyun.com/114.114.114.114
