--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47778,6 +47778,7 @@ server=/jinhe-energy.com/114.114.114.114
 server=/jinher.com/114.114.114.114
 server=/jinheshiye.com/114.114.114.114
 server=/jinhongchina.com/114.114.114.114
+server=/jinhonggroup.com/114.114.114.114
 server=/jinhongnl.com/114.114.114.114
 server=/jinhu.info/114.114.114.114
 server=/jinhuanluye.com/114.114.114.114
