accelerated-domains: add szsaibao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76519,6 +76519,7 @@ server=/szrunning.com/114.114.114.114
 server=/szryc.com/114.114.114.114
 server=/szrzxfpc.com/114.114.114.114
 server=/szs189.com/114.114.114.114
+server=/szsaibao.com/114.114.114.114
 server=/szsailong.com/114.114.114.114
 server=/szsaiwei.com/114.114.114.114
 server=/szsamtek.com/114.114.114.114
