accelerated-domains: add vdobiotech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81500,6 +81500,7 @@ server=/vdncloud.com/114.114.114.114
 server=/vdndc.com/114.114.114.114
 server=/vdnsv.com/114.114.114.114
 server=/vdnyuwwq.com/114.114.114.114
+server=/vdobiotech.com/114.114.114.114
 server=/vdolady.com/114.114.114.114
 server=/vdongchina.com/114.114.114.114
 server=/vdsdsf2.fun/114.114.114.114
