accelerated-domains: add lingdiancaishui.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54072,6 +54072,7 @@ server=/lingceu.com/114.114.114.114
 server=/lingd.com/114.114.114.114
 server=/lingdai.name/114.114.114.114
 server=/lingdi.net/114.114.114.114
+server=/lingdiancaishui.com/114.114.114.114
 server=/lingdianksw.com/114.114.114.114
 server=/lingdong.net/114.114.114.114
 server=/lingdongweilai.com/114.114.114.114
