--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68739,6 +68739,7 @@ server=/reqwevf3.fun/114.114.114.114
 server=/rergdfh.com/114.114.114.114
 server=/reryt111.fun/114.114.114.114
 server=/reseetech.com/114.114.114.114
+server=/resemi.com/114.114.114.114
 server=/reservehemu.com/114.114.114.114
 server=/resheji.com/114.114.114.114
 server=/residenzavillafiorita.com/114.114.114.114
