accelerated-domains: add memsensing.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57665,6 +57665,7 @@ server=/memoverflow.com/114.114.114.114
 server=/mems.me/114.114.114.114
 server=/memsconsulting.com/114.114.114.114
 server=/memseminar.com/114.114.114.114
+server=/memsensing.com/114.114.114.114
 server=/memuu.com/114.114.114.114
 server=/men.ci/114.114.114.114
 server=/menchuang.biz/114.114.114.114
