accelerated-domains: add youseen.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93010,6 +93010,7 @@ server=/yourtravelyourchoice.com/114.114.114.114
 server=/youruitech.com/114.114.114.114
 server=/yousc.com/114.114.114.114
 server=/youscm.com/114.114.114.114
+server=/youseen.com/114.114.114.114
 server=/yousengshe.com/114.114.114.114
 server=/yousenjiaoyu.com/114.114.114.114
 server=/youser.cc/114.114.114.114
