--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45615,6 +45615,7 @@ server=/isilent.me/114.114.114.114
 server=/isilicontech.com/114.114.114.114
 server=/isiluke.net/114.114.114.114
 server=/isiluke.org/114.114.114.114
+server=/isilvermaterials.com/114.114.114.114
 server=/isimcere.com/114.114.114.114
 server=/isinosig.com/114.114.114.114
 server=/isixiang.com/114.114.114.114
