accelerated-domains: add bama-supercon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12955,6 +12955,7 @@ server=/ballpure.com/114.114.114.114
 server=/balltv.cc/114.114.114.114
 server=/baltamatica.com/114.114.114.114
 server=/baltmd.com/114.114.114.114
+server=/bama-supercon.com/114.114.114.114
 server=/bama555.com/114.114.114.114
 server=/bamaiwo.com/114.114.114.114
 server=/bamalifelong.com/114.114.114.114
