accelerated-domains: add longwaycabinet.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55104,6 +55104,7 @@ server=/longtian.info/114.114.114.114
 server=/longtugame.com/114.114.114.114
 server=/longtuojixie.com/114.114.114.114
 server=/longu.com/114.114.114.114
+server=/longwaycabinet.com/114.114.114.114
 server=/longwenedu.com/114.114.114.114
 server=/longwiki.org/114.114.114.114
 server=/longwin.org/114.114.114.114
