--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11977,6 +11977,7 @@ server=/astestech.com/114.114.114.114
 server=/astfc.com/114.114.114.114
 server=/asthis.net/114.114.114.114
 server=/astipaint.com/114.114.114.114
+server=/astra-biotech.com/114.114.114.114
 server=/astraintel.com/114.114.114.114
 server=/astratt-video.com/114.114.114.114
 server=/astron.ac/114.114.114.114
