accelerated-domains: add hicomp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40070,6 +40070,7 @@ server=/hiclc.com/114.114.114.114
 server=/hicling.com/114.114.114.114
 server=/hicloud.com/114.114.114.114
 server=/hicnhm.com/114.114.114.114
+server=/hicomp.com/114.114.114.114
 server=/hiconey.com/114.114.114.114
 server=/hiconics-zn.com/114.114.114.114
 server=/hicoo.net/114.114.114.114
