--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68858,6 +68858,7 @@ server=/ribaow.com/114.114.114.114
 server=/ribencun.com/114.114.114.114
 server=/ribenguwan.com/114.114.114.114
 server=/ribenshi.com/114.114.114.114
+server=/ribolia.com/114.114.114.114
 server=/ricebook.com/114.114.114.114
 server=/ricequant.com/114.114.114.114
 server=/riceyun.com/114.114.114.114
