--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64906,6 +64906,7 @@ server=/pmallstore.com/114.114.114.114
 server=/pmcaff.com/114.114.114.114
 server=/pmceo.com/114.114.114.114
 server=/pmcj-group.com/114.114.114.114
+server=/pmcrobot.com/114.114.114.114
 server=/pmd5.com/114.114.114.114
 server=/pmdak.com/114.114.114.114
 server=/pmdaniu.com/114.114.114.114
