accelerated-domains: add smqh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73938,6 +73938,7 @@ server=/smovie168.com/114.114.114.114
 server=/smowo.com/114.114.114.114
 server=/smpg888.com/114.114.114.114
 server=/smppw.com/114.114.114.114
+server=/smqh.com/114.114.114.114
 server=/smrmyy.com/114.114.114.114
 server=/sms18.com/114.114.114.114
 server=/sms9.net/114.114.114.114
