--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74802,6 +74802,7 @@ server=/sseinfo.com/114.114.114.114
 server=/ssf.cc/114.114.114.114
 server=/ssfb86.com/114.114.114.114
 server=/ssfei.com/114.114.114.114
+server=/ssgedm.com/114.114.114.114
 server=/ssgeek.com/114.114.114.114
 server=/ssggg.com/114.114.114.114
 server=/ssgushi.com/114.114.114.114
