--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27642,6 +27642,7 @@ server=/eaecis.com/114.114.114.114
 server=/eafifaonline2.com/114.114.114.114
 server=/eagla163.com/114.114.114.114
 server=/eaglebgm.com/114.114.114.114
+server=/eaglejt.com/114.114.114.114
 server=/eaglemale.com/114.114.114.114
 server=/eagleyun.com/114.114.114.114
 server=/eagllwin.com/114.114.114.114
