--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73072,6 +73072,7 @@ server=/shzymp.com/114.114.114.114
 server=/shzytzj.com/114.114.114.114
 server=/shzyw.com/114.114.114.114
 server=/si-en.com/114.114.114.114
+server=/si-era.com/114.114.114.114
 server=/si-in.com/114.114.114.114
 server=/si9377.com/114.114.114.114
 server=/siad-c.com/114.114.114.114
