--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75650,6 +75650,7 @@ server=/suyujoy.com/114.114.114.114
 server=/suyun.net/114.114.114.114
 server=/suyutech.com/114.114.114.114
 server=/suzhou-marathon.com/114.114.114.114
+server=/suzhou-otsuka.com/114.114.114.114
 server=/suzhoubank.com/114.114.114.114
 server=/suzhouds.com/114.114.114.114
 server=/suzhoufashion.com/114.114.114.114
