--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14602,6 +14602,7 @@ server=/biohyalux.com/114.114.114.114
 server=/bioinfo-scrounger.com/114.114.114.114
 server=/bioktech.com/114.114.114.114
 server=/biolab.xyz/114.114.114.114
+server=/biolihe.com/114.114.114.114
 server=/bionav.cc/114.114.114.114
 server=/bioon.com/114.114.114.114
 server=/bioon.net/114.114.114.114
