accelerated-domains: add ngksz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60963,6 +60963,7 @@ server=/nghmesc.com/114.114.114.114
 server=/nginstar.net/114.114.114.114
 server=/ngjjtg.com/114.114.114.114
 server=/ngkjjt.com/114.114.114.114
+server=/ngksz.com/114.114.114.114
 server=/ngmco.net/114.114.114.114
 server=/ngmyt.com/114.114.114.114
 server=/ngngf.com/114.114.114.114
