--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12369,6 +12369,7 @@ server=/axiba66.com/114.114.114.114
 server=/axic6906.com/114.114.114.114
 server=/axilelibrary.com/114.114.114.114
 server=/axinsur.com/114.114.114.114
+server=/axisfluid.com/114.114.114.114
 server=/axjm-ex.com/114.114.114.114
 server=/axjsw.com/114.114.114.114
 server=/axmro.com/114.114.114.114
