--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79531,6 +79531,7 @@ server=/tsingtoo.com/114.114.114.114
 server=/tsj-js.com/114.114.114.114
 server=/tsj-tsy.com/114.114.114.114
 server=/tsjtsy.com/114.114.114.114
+server=/tsk-fixture.com/114.114.114.114
 server=/tskscn.com/114.114.114.114
 server=/tslib.net/114.114.114.114
 server=/tsljzs.com/114.114.114.114
