accelerated-domains: add jspesz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49187,6 +49187,7 @@ server=/jsp51.com/114.114.114.114
 server=/jspang.com/114.114.114.114
 server=/jspatch.com/114.114.114.114
 server=/jspeople.com/114.114.114.114
+server=/jspesz.com/114.114.114.114
 server=/jspetro.com/114.114.114.114
 server=/jsph.net/114.114.114.114
 server=/jsphp.net/114.114.114.114
