accelerated-domains: add kbspheres.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50615,6 +50615,7 @@ server=/kbrightlaw.com/114.114.114.114
 server=/kbscd.net/114.114.114.114
 server=/kbscloud.com/114.114.114.114
 server=/kbsml.com/114.114.114.114
+server=/kbspheres.com/114.114.114.114
 server=/kbw2018.com/114.114.114.114
 server=/kbyun.com/114.114.114.114
 server=/kbzs88.com/114.114.114.114
