accelerated-domains: add ncmbio.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60552,6 +60552,7 @@ server=/nchq.cc/114.114.114.114
 server=/nchte.com/114.114.114.114
 server=/nchtech.com/114.114.114.114
 server=/nciyuan.com/114.114.114.114
+server=/ncmbio.com/114.114.114.114
 server=/ncmem.com/114.114.114.114
 server=/ncmtkj.com/114.114.114.114
 server=/ncnynl.com/114.114.114.114
