--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63756,6 +63756,7 @@ server=/panabit.com/114.114.114.114
 server=/panaihua.com/114.114.114.114
 server=/panasonic-door.com/114.114.114.114
 server=/panasonicmall.com/114.114.114.114
+server=/panawincn.com/114.114.114.114
 server=/panbrake.com/114.114.114.114
 server=/panchuang.net/114.114.114.114
 server=/panda-home.com/114.114.114.114
