--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97622,6 +97622,7 @@ server=/zkhb.group/114.114.114.114
 server=/zkhcsoft.com/114.114.114.114
 server=/zkhcsy.com/114.114.114.114
 server=/zkhgchip.com/114.114.114.114
+server=/zkicme.com/114.114.114.114
 server=/zkii.net/114.114.114.114
 server=/zking.com/114.114.114.114
 server=/zkkailiaoji.com/114.114.114.114
