--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74037,6 +74037,7 @@ server=/snaptube.app/114.114.114.114
 server=/snbkf34.com/114.114.114.114
 server=/sncoda.com/114.114.114.114
 server=/snd-yy.com/114.114.114.114
+server=/sndgroup.com/114.114.114.114
 server=/sndhr.com/114.114.114.114
 server=/sndks.com/114.114.114.114
 server=/sndo.com/114.114.114.114
