--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71010,6 +71010,7 @@ server=/sem17.com/114.114.114.114
 server=/semem99.com/114.114.114.114
 server=/semeye.com/114.114.114.114
 server=/semgz.com/114.114.114.114
+server=/semi-casi.com/114.114.114.114
 server=/semi.design/114.114.114.114
 server=/semidata.info/114.114.114.114
 server=/semiee.com/114.114.114.114
