--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76175,6 +76175,7 @@ server=/sz-ekl.com/114.114.114.114
 server=/sz-etong.com/114.114.114.114
 server=/sz-gaokai.com/114.114.114.114
 server=/sz-huashi.com/114.114.114.114
+server=/sz-huayuan.com/114.114.114.114
 server=/sz-hzt.com/114.114.114.114
 server=/sz-jiahong.com/114.114.114.114
 server=/sz-jlc.com/114.114.114.114
