accelerated-domains: add usa-gam.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81079,6 +81079,7 @@ server=/urumqi-air.com/114.114.114.114
 server=/us-ex.com/114.114.114.114
 server=/us-qianzheng.com/114.114.114.114
 server=/us0.me/114.114.114.114
+server=/usa-gam.com/114.114.114.114
 server=/usa-idc.com/114.114.114.114
 server=/usaapcups.com/114.114.114.114
 server=/usaas.net/114.114.114.114
