--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45151,6 +45151,7 @@ server=/insidestuffs.com/114.114.114.114
 server=/insmoin.com/114.114.114.114
 server=/insnail.com/114.114.114.114
 server=/insneu.com/114.114.114.114
+server=/insnex.com/114.114.114.114
 server=/insome.com/114.114.114.114
 server=/insp.love/114.114.114.114
 server=/inspeed.biz/114.114.114.114
