accelerated-domains: add whchip.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84132,6 +84132,7 @@ server=/whcch802.com/114.114.114.114
 server=/whcdc.org/114.114.114.114
 server=/whcfs.org/114.114.114.114
 server=/whcgtx.com/114.114.114.114
+server=/whchip.com/114.114.114.114
 server=/whcjfc.com/114.114.114.114
 server=/whcjfq.com/114.114.114.114
 server=/whckxx.com/114.114.114.114
