accelerated-domains: add jsgc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49071,6 +49071,7 @@ server=/jsfw8.com/114.114.114.114
 server=/jsfwpt.com/114.114.114.114
 server=/jsfycdn3.com/114.114.114.114
 server=/jsgbds.com/114.114.114.114
+server=/jsgc.com/114.114.114.114
 server=/jsgc168.com/114.114.114.114
 server=/jsgcbank.com/114.114.114.114
 server=/jsgdsb.com/114.114.114.114
