accelerated-domains: add lintec-china.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54291,6 +54291,7 @@ server=/linstitute.net/114.114.114.114
 server=/lint2.com/114.114.114.114
 server=/lintai.tech/114.114.114.114
 server=/lintcode.com/114.114.114.114
+server=/lintec-china.com/114.114.114.114
 server=/lintey.com/114.114.114.114
 server=/lintongrc.com/114.114.114.114
 server=/lintui.com/114.114.114.114
