--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76714,6 +76714,7 @@ server=/szzhaodaxin.com/114.114.114.114
 server=/szzhsponge.com/114.114.114.114
 server=/szzhuoju.com/114.114.114.114
 server=/szzntech.com/114.114.114.114
+server=/szznzn.com/114.114.114.114
 server=/szzoan.com/114.114.114.114
 server=/szzs360.com/114.114.114.114
 server=/szzscq.com/114.114.114.114
