--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83748,6 +83748,7 @@ server=/welife100.com/114.114.114.114
 server=/welinkpark.com/114.114.114.114
 server=/welk.co/114.114.114.114
 server=/well-js.com/114.114.114.114
+server=/well-trust.com/114.114.114.114
 server=/wellaide.com/114.114.114.114
 server=/wellcee.com/114.114.114.114
 server=/wellhope.net/114.114.114.114
