--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76179,6 +76179,7 @@ server=/sz-edsy.com/114.114.114.114
 server=/sz-ekl.com/114.114.114.114
 server=/sz-etong.com/114.114.114.114
 server=/sz-gaokai.com/114.114.114.114
+server=/sz-hdenergy.com/114.114.114.114
 server=/sz-huashi.com/114.114.114.114
 server=/sz-huayuan.com/114.114.114.114
 server=/sz-hzt.com/114.114.114.114
