--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76574,6 +76574,7 @@ server=/szseasons.com/114.114.114.114
 server=/szsfgc.com/114.114.114.114
 server=/szshequ.org/114.114.114.114
 server=/szshtjm.com/114.114.114.114
+server=/szshuangjin.com/114.114.114.114
 server=/szshuori.com/114.114.114.114
 server=/szshutao.com/114.114.114.114
 server=/szsia.com/114.114.114.114
