accelerated-domains: add ulvac-suzhou.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80742,6 +80742,7 @@ server=/ultramanol.com/114.114.114.114
 server=/ultrapay.net/114.114.114.114
 server=/ultrarisc.com/114.114.114.114
 server=/ulucu.com/114.114.114.114
+server=/ulvac-suzhou.com/114.114.114.114
 server=/ulzdk.com/114.114.114.114
 server=/um.run/114.114.114.114
 server=/umajor.net/114.114.114.114
