accelerated-domains: add innobm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45109,6 +45109,7 @@ server=/innity.com/114.114.114.114
 server=/innity.net/114.114.114.114
 server=/innnnnn.com/114.114.114.114
 server=/inno3d.cc/114.114.114.114
+server=/innobm.com/114.114.114.114
 server=/innocn.com/114.114.114.114
 server=/innocomn.com/114.114.114.114
 server=/innodealing.com/114.114.114.114
