accelerated-domains: add sz-talant.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76197,6 +76197,7 @@ server=/sz-osckj.com/114.114.114.114
 server=/sz-printing.com/114.114.114.114
 server=/sz-skt.com/114.114.114.114
 server=/sz-sunway.com/114.114.114.114
+server=/sz-talant.com/114.114.114.114
 server=/sz-tianmai.com/114.114.114.114
 server=/sz-trip.com/114.114.114.114
 server=/sz-ua.com/114.114.114.114
