--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13971,6 +13971,7 @@ server=/berui.com/114.114.114.114
 server=/berylbot.com/114.114.114.114
 server=/beryt111.fun/114.114.114.114
 server=/bes.ren/114.114.114.114
+server=/besbranding.com/114.114.114.114
 server=/beschannels.com/114.114.114.114
 server=/bescloud.com/114.114.114.114
 server=/besclouds.com/114.114.114.114
