accelerated-domains: add tuqiangcn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79948,6 +79948,7 @@ server=/tupianzj.com/114.114.114.114
 server=/tupu360.com/114.114.114.114
 server=/tuputech.com/114.114.114.114
 server=/tupuw.com/114.114.114.114
+server=/tuqiangcn.com/114.114.114.114
 server=/tuqou.com/114.114.114.114
 server=/tuquu.com/114.114.114.114
 server=/turangyq.com/114.114.114.114
