--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81737,6 +81737,7 @@ server=/vicp.net/114.114.114.114
 server=/vicpalm.com/114.114.114.114
 server=/vicrab.com/114.114.114.114
 server=/vicsdf.com/114.114.114.114
+server=/vicsz.com/114.114.114.114
 server=/victim.xn--vuq861b/114.114.114.114
 server=/victory-inflight.com/114.114.114.114
 server=/viczz.com/114.114.114.114
