accelerated-domains: add lixinpharm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54649,6 +54649,7 @@ server=/lixiaozhe.com/114.114.114.114
 server=/lixinapp.com/114.114.114.114
 server=/lixinger.com/114.114.114.114
 server=/lixingyong.com/114.114.114.114
+server=/lixinpharm.com/114.114.114.114
 server=/lixuan360.com/114.114.114.114
 server=/lixueba.com/114.114.114.114
 server=/lixueceshi.com/114.114.114.114
