--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75248,6 +75248,7 @@ server=/suchasplus.com/114.114.114.114
 server=/suchengmeizhan.com/114.114.114.114
 server=/suchugao.com/114.114.114.114
 server=/suchz.com/114.114.114.114
+server=/sucjg.com/114.114.114.114
 server=/suckdude.com/114.114.114.114
 server=/sucop.com/114.114.114.114
 server=/sucoupon.com/114.114.114.114
