accelerated-domains: add sungent.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75424,6 +75424,7 @@ server=/sunfront.com/114.114.114.114
 server=/sunft.com/114.114.114.114
 server=/sungainyeast.com/114.114.114.114
 server=/sungari1995.com/114.114.114.114
+server=/sungent.com/114.114.114.114
 server=/sungesoft.com/114.114.114.114
 server=/sungine.com/114.114.114.114
 server=/sunglassesandgoggles.com/114.114.114.114
