accelerated-domains: add szngdz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76509,6 +76509,7 @@ server=/sznaibeng.com/114.114.114.114
 server=/sznews.com/114.114.114.114
 server=/sznffc.com/114.114.114.114
 server=/sznfwt.net/114.114.114.114
+server=/szngdz.com/114.114.114.114
 server=/szniego.com/114.114.114.114
 server=/szniushi.com/114.114.114.114
 server=/szniute.com/114.114.114.114
