accelerated-domains: add troxchina.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79443,6 +79443,7 @@ server=/trollax.com/114.114.114.114
 server=/tronixin.com/114.114.114.114
 server=/tronlife.com/114.114.114.114
 server=/tropcdn.com/114.114.114.114
+server=/troxchina.com/114.114.114.114
 server=/trpcdn.net/114.114.114.114
 server=/trqjrp.xyz/114.114.114.114
 server=/trrtv.com/114.114.114.114
