--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54675,6 +54675,7 @@ server=/liyuan99.vip/114.114.114.114
 server=/liyuanheng.com/114.114.114.114
 server=/liyuanhospital.com/114.114.114.114
 server=/liyuanresort.com/114.114.114.114
+server=/liyuansz.com/114.114.114.114
 server=/liyugang.com/114.114.114.114
 server=/liyujn.com/114.114.114.114
 server=/liyunshuwu.com/114.114.114.114
