accelerated-domains: add sz-hyauto.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76188,6 +76188,7 @@ server=/sz-gaokai.com/114.114.114.114
 server=/sz-hdenergy.com/114.114.114.114
 server=/sz-huashi.com/114.114.114.114
 server=/sz-huayuan.com/114.114.114.114
+server=/sz-hyauto.com/114.114.114.114
 server=/sz-hzt.com/114.114.114.114
 server=/sz-jiahong.com/114.114.114.114
 server=/sz-jlc.com/114.114.114.114
