--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32577,6 +32577,7 @@ server=/gdmuah.com/114.114.114.114
 server=/gdmuseum.com/114.114.114.114
 server=/gdmztv.com/114.114.114.114
 server=/gdmzw.com/114.114.114.114
+server=/gdnano.com/114.114.114.114
 server=/gdnewmedia.cc/114.114.114.114
 server=/gdnfzb.com/114.114.114.114
 server=/gdniubang.com/114.114.114.114
