accelerated-domains: add huajicnc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41917,6 +41917,7 @@ server=/huajianmed.com/114.114.114.114
 server=/huajiantong.com/114.114.114.114
 server=/huajiao.com/114.114.114.114
 server=/huajiaow.com/114.114.114.114
+server=/huajicnc.com/114.114.114.114
 server=/huajieai.com/114.114.114.114
 server=/huajifen.com/114.114.114.114
 server=/huajin100.com/114.114.114.114
