--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97682,6 +97682,7 @@ server=/zkungfu.com/114.114.114.114
 server=/zkuth.com/114.114.114.114
 server=/zkuyun.com/114.114.114.114
 server=/zkw2009.com/114.114.114.114
+server=/zkwtech.com/114.114.114.114
 server=/zkx.cc/114.114.114.114
 server=/zkxblog.com/114.114.114.114
 server=/zkxlkj.net/114.114.114.114
