accelerated-domains: add jiumei168.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48137,6 +48137,7 @@ server=/jiulve.com/114.114.114.114
 server=/jiumaojiu.com/114.114.114.114
 server=/jiumaster.com/114.114.114.114
 server=/jiumei.com/114.114.114.114
+server=/jiumei168.com/114.114.114.114
 server=/jiumei8.com/114.114.114.114
 server=/jiumeisheng.com/114.114.114.114
 server=/jiumentongbu.com/114.114.114.114
