--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83760,6 +83760,7 @@ server=/welcrm.com/114.114.114.114
 server=/weledpower.com/114.114.114.114
 server=/welefen.com/114.114.114.114
 server=/weleve.com/114.114.114.114
+server=/welgwiyan.com/114.114.114.114
 server=/weliads.com/114.114.114.114
 server=/welian.com/114.114.114.114
 server=/welidaimkt.com/114.114.114.114
