--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49154,6 +49154,7 @@ server=/jskhfm.com/114.114.114.114
 server=/jskjcms.com/114.114.114.114
 server=/jsklcy.com/114.114.114.114
 server=/jskmmy.com/114.114.114.114
+server=/jskoso.com/114.114.114.114
 server=/jskpcg.org/114.114.114.114
 server=/jskuajing.com/114.114.114.114
 server=/jskwt.com/114.114.114.114
