accelerated-domains: add nimitzvac.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61125,6 +61125,7 @@ server=/nikkiup2u2.com/114.114.114.114
 server=/nilai.com/114.114.114.114
 server=/nileloan.com/114.114.114.114
 server=/nilend.com/114.114.114.114
+server=/nimitzvac.com/114.114.114.114
 server=/nimolife.com/114.114.114.114
 server=/nimotion.com/114.114.114.114
 server=/nimzx.com/114.114.114.114
