--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71287,6 +71287,7 @@ server=/sgst.prod.dl.playstation.net/114.114.114.114
 server=/sgsugou.com/114.114.114.114
 server=/sgsxw.com/114.114.114.114
 server=/sgsyxx.net/114.114.114.114
+server=/sgt21.com/114.114.114.114
 server=/sgtmos.com/114.114.114.114
 server=/sgtsglb.com/114.114.114.114
 server=/sguo.com/114.114.114.114
