accelerated-domains: add sunwellpower.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75526,6 +75526,7 @@ server=/sunwatt.com/114.114.114.114
 server=/sunwayworld.com/114.114.114.114
 server=/sunweihu.com/114.114.114.114
 server=/sunweiwei.com/114.114.114.114
+server=/sunwellpower.com/114.114.114.114
 server=/sunwin2001.com/114.114.114.114
 server=/sunwinon.com/114.114.114.114
 server=/sunwk.fun/114.114.114.114
