accelerated-domains: add szfirstplastic.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76342,6 +76342,7 @@ server=/szfengtu88.com/114.114.114.114
 server=/szffmr.com/114.114.114.114
 server=/szfg.net/114.114.114.114
 server=/szfinee.com/114.114.114.114
+server=/szfirstplastic.com/114.114.114.114
 server=/szfiu.com/114.114.114.114
 server=/szfjt.com/114.114.114.114
 server=/szfolo.com/114.114.114.114
