accelerated-domains: add tcdnext.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77330,6 +77330,7 @@ server=/tc911.vip/114.114.114.114
 server=/tc930.com/114.114.114.114
 server=/tccxfw.com/114.114.114.114
 server=/tcdinfo.com/114.114.114.114
+server=/tcdnext.com/114.114.114.114
 server=/tcdnlive.com/114.114.114.114
 server=/tcdnlivebak1.com/114.114.114.114
 server=/tcdnos.com/114.114.114.114
