--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20266,6 +20266,7 @@ server=/chunsheng.com/114.114.114.114
 server=/chunshuitang.com/114.114.114.114
 server=/chunshuizhijia.com/114.114.114.114
 server=/chunsuns.com/114.114.114.114
+server=/chunxing-group.com/114.114.114.114
 server=/chunxuanmao.com/114.114.114.114
 server=/chunyanhui.com/114.114.114.114
 server=/chunyiscdk.com/114.114.114.114
