accelerated-domains: add dlbiotech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25823,6 +25823,7 @@ server=/dlbaohuang.com/114.114.114.114
 server=/dlbbdk.com/114.114.114.114
 server=/dlbgsc.com/114.114.114.114
 server=/dlbh.net/114.114.114.114
+server=/dlbiotech.com/114.114.114.114
 server=/dlcaic.com/114.114.114.114
 server=/dlcsos.com/114.114.114.114
 server=/dlcykjzs.com/114.114.114.114
