--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29072,6 +29072,7 @@ server=/etsstar.com/114.114.114.114
 server=/etstock.net/114.114.114.114
 server=/ett-cn.com/114.114.114.114
 server=/ett.cc/114.114.114.114
+server=/ettabiotech.com/114.114.114.114
 server=/ettbl.org/114.114.114.114
 server=/ettdnsv.com/114.114.114.114
 server=/ettinn.com/114.114.114.114
