accelerated-domains: add sicreat.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73132,6 +73132,7 @@ server=/sichw.com/114.114.114.114
 server=/sicimano.com/114.114.114.114
 server=/sicoll.com/114.114.114.114
 server=/sicosemi.com/114.114.114.114
+server=/sicreat.com/114.114.114.114
 server=/sicuo.com/114.114.114.114
 server=/siengine.com/114.114.114.114
 server=/sieredu.com/114.114.114.114
