--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76312,6 +76312,7 @@ server=/szdc.org/114.114.114.114
 server=/szdcjd.com/114.114.114.114
 server=/szddns.net/114.114.114.114
 server=/szdesigncenter.org/114.114.114.114
+server=/szdf.com/114.114.114.114
 server=/szdiantu.com/114.114.114.114
 server=/szdiyibo.com/114.114.114.114
 server=/szdljt.com/114.114.114.114
