accelerated-domains: add parketech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63947,6 +63947,7 @@ server=/parduscycle.com/114.114.114.114
 server=/parentshk.com/114.114.114.114
 server=/paris-girafe.com/114.114.114.114
 server=/parkbees.com/114.114.114.114
+server=/parketech.com/114.114.114.114
 server=/parkicloud.com/114.114.114.114
 server=/parking520.com/114.114.114.114
 server=/parkingadsaas.com/114.114.114.114
