--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68873,6 +68873,7 @@ server=/rhctwy.com/114.114.114.114
 server=/rhcyl.com/114.114.114.114
 server=/rhexe.com/114.114.114.114
 server=/rhhz.net/114.114.114.114
+server=/rhine-inc.com/114.114.114.114
 server=/rhinosgamestwhk.com/114.114.114.114
 server=/rhkj.com/114.114.114.114
 server=/rhonghai.com/114.114.114.114
