--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76219,6 +76219,7 @@ server=/sz-osckj.com/114.114.114.114
 server=/sz-printing.com/114.114.114.114
 server=/sz-skt.com/114.114.114.114
 server=/sz-sunway.com/114.114.114.114
+server=/sz-suwan.com/114.114.114.114
 server=/sz-talant.com/114.114.114.114
 server=/sz-tianmai.com/114.114.114.114
 server=/sz-trip.com/114.114.114.114
