accelerated-domains: add szyingsi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76716,6 +76716,7 @@ server=/szyichengjd.com/114.114.114.114
 server=/szyin.com/114.114.114.114
 server=/szyingduoduo.com/114.114.114.114
 server=/szyinglian.com/114.114.114.114
+server=/szyingsi.com/114.114.114.114
 server=/szyingzhan.com/114.114.114.114
 server=/szyink.com/114.114.114.114
 server=/szyixiu.net/114.114.114.114
