accelerated-domains: add ukingtech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80731,6 +80731,7 @@ server=/ukelink.com/114.114.114.114
 server=/uker.net/114.114.114.114
 server=/ukh5.com/114.114.114.114
 server=/ukiea.com/114.114.114.114
+server=/ukingtech.com/114.114.114.114
 server=/ukluhu.com/114.114.114.114
 server=/ukol.net/114.114.114.114
 server=/ukongm.com/114.114.114.114
