--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30364,6 +30364,7 @@ server=/fengread.com/114.114.114.114
 server=/fengshangweekly.com/114.114.114.114
 server=/fengshankeji.com/114.114.114.114
 server=/fengshi8888.com/114.114.114.114
+server=/fengshigroup.com/114.114.114.114
 server=/fengshuidashuju.com/114.114.114.114
 server=/fengsung.com/114.114.114.114
 server=/fengtai.tv/114.114.114.114
