--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74066,6 +74066,7 @@ server=/snd-yy.com/114.114.114.114
 server=/sndgroup.com/114.114.114.114
 server=/sndhr.com/114.114.114.114
 server=/sndks.com/114.114.114.114
+server=/sndnt.com/114.114.114.114
 server=/sndo.com/114.114.114.114
 server=/sndzrg0.org/114.114.114.114
 server=/sneac.com/114.114.114.114
